--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
   splashscreen: ^1.3.5
   firebase: ^9.0.0
+  firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.0
+  fluttertoast: ^7.1.6
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
@@ -23,3 +25,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - Images/
