--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   cloud_firestore: ^1.0.0
   fluttertoast: ^7.1.6
   cupertino_icons: ^1.0.0
+  google_maps_flutter: ^2.0.1
+  provider: ^5.0.0
+  http: ^0.13.0
+  geolocator: ^7.0.1
 
 dev_dependencies:
   flutter_test:
