--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   fluttertoast: ^7.1.6
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^2.0.1
+  geocoder: ^0.2.1
   provider: ^5.0.0
   http: ^0.13.0
   geolocator: ^7.0.1
